now it work in a generic way
