# src/lookup-models/classification.ts
@@ -1,5 +1,0 @@
-import ILookupOption from "./lookupOption";
-
-interface IClassificationOption extends ILookupOption {};
-
-export default IClassificationOption;
