# src/lookup-models/index.ts
@@ -1,6 +1,3 @@
-import ICountryOption from './country';
-import { Properties } from './country';
-import IClassificationOption from './classification';
-import ILookupOption from './lookupOption';
+import { ILookupOption } from './lookupOption';
 
-export { ICountryOption, IClassificationOption, ILookupOption, Properties };
+export { ILookupOption };
